# plugin-teamspeak3-speaker-view-win

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
resources/: speakerview.ini
sdk/: README.md
src/: ConfigDialog.cpp  ConfigDialog.h  ConfigModel.cpp  ConfigModel.h  HttpControlServer.cpp  HttpControlServer.h  Log.cpp  Log.h  NativeStyle.cpp  NativeStyle.h  OverlayController.cpp  OverlayController.h  OverlayWidget.cpp  OverlayWidget.h  PluginContext.cpp  PluginContext.h  SpeakerRowWidget.cpp  SpeakerRowWidget.h  SpeakerTracker.cpp  SpeakerTracker.h  TS3Bridge.cpp  TS3Bridge.h  Theme.cpp  Theme.h  TrayController.cpp  TrayController.h  plugin.cpp
tasks/: lessons.md  todo.md
